Add config management.  Udpate docs
